--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Charis+SIL&display=swap');
 /* font-family: 'Roboto Slab', serif; */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
-
+* {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
